--- a/Public/index.html
+++ b/Public/index.html
@@ -83,16 +83,22 @@
             </div>
         </section> -->
 
-        <section id="guide">
+        <section id="guide" class="card">
             <H1>GUIDE</H1>
             <div>
                 <h3>Register</h3>
+                <img src="./img/user-reg.png" alt="user register image" class="guide-img">
+                <p>Provide the necessary information for registration</p>
             </div>
             <div>
                 <h3>Login</h3>
+                <img src="./img/user-login.png" alt="user login image" class="guide-img">
+                <p>Login with your credentials</p>
             </div>
             <div>
                 <h3>Chat</h3>
+                <img src="./img/chat.png" alt="chat image" class="guide-img">
+                <p>Add friends and start chatting</p>
             </div>
         </section>
         <section id="loginRegister">
