--- a/Public/html/userPage.html
+++ b/Public/html/userPage.html
@@ -45,7 +45,7 @@
                     <a class="nav-item nav-link active" href="#" id="link">Home <span
                             class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link" href="#" id="link">Features</a>
-                    <a class="nav-item nav-link" href="#" id="link">Log Out</a>
+                    <a class="nav-item nav-link" href="../index.html" id="link">Log Out</a>
                 </div>
             </div>
         </nav>
@@ -87,7 +87,8 @@
 
                     </li>
                     <li>
-                        <a href="friends.html"><i class="fas fa-user-friends user"></i> <span>Friends</span> </a>
+                        <a href="friends.html" class="friend-link"><i class="fas fa-user-friends user"></i>
+                            <span>Friends</span> </a>
 
                     </li>
                     <li>
@@ -104,8 +105,8 @@
         </section>
         <section id="content" class="card">
             <div class="empty">
-                <p>You dont have any friend yet</p>
-                <button class="btn btn-success">Add Friend</button>
+                <p>OOps!! you dont have any chats yet</p>
+                <button class="btn btn-success">Add friends to chats</button>
             </div>
             <div class="chat-well">
                 <ul class="list-group list-group-flush" id="chatList">
@@ -126,6 +127,9 @@
         </ul>
     </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
@@ -155,6 +159,7 @@
 
 
                             });
+                            $('[data-toggle="tooltip"]').tooltip()
                         }
 
                     })
@@ -195,6 +200,12 @@
             localStorage.setItem('recieverName', name)
             localStorage.setItem('chatId', cId)
         }
+
+
+        $(".btn-success").click(e => {
+            e.preventDefault();
+            $(".friend-link")[0].click()
+        })
 
         function getTime(res) {
             let tRes, hour, min, d;
