--- a/Public/index.html
+++ b/Public/index.html
@@ -250,151 +250,15 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/jquery.validate.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/additional-methods.min.js"></script>
+    <script src="./Js/userIndex.js"></script>
     <script>
-        $(document).ready(
-            function getStates() {
-                $.ajax({
-                    type: "GET",
-                    url: "http://localhost:3000/states",
-                    success: function (data) {
-                        data.forEach(element => {
-                            $("#state").append(`<option value="${element}">${element}</option>`)
-                        });
-                    }
-                })
-                localStorage.clear()
+        $(document).ready(function () {
+                localStorage.clear();
             }
-
 
         )
 
-        $.validator.addMethod('emailCustom', function (value, element) {
-            return this.optional(element) || /[a-z0-9.-]+@[a-z-]+\.(com|ng|net)/i.test(value)
-        }, "Please enter a correct email")
 
-
-
-        $.validator.addMethod('removeSpace', function (value) {
-            return value = $.trim(value);
-        })
-        $.validator.addMethod('phoneNG', function (value, element) {
-            return this.optional(element) || /(081|080|090|070)\d{8}$/.test(value)
-        }, "Please enter a correct number")
-
-        let selectedState = $("#state");
-        $("#state").blur(function () {
-            getCities()
-        })
-
-        function getCities() {
-            let state = selectedState[0].value;
-            $("#city").html('');
-            if (state !== '') {
-                $.ajax({
-                    type: 'GET',
-                    url: "http://localhost:3000/cities",
-                    success: function (data) {
-                        data[state].forEach(element => {
-                            $("#city").append(`<option>${element}</option>`)
-                        })
-                    }
-                })
-            }
-
-
-        }
-
-        $("#userReg").validate({
-            rules: {
-                firstname: {
-                    required: true,
-                    rangelength: [2, 20],
-                    lettersonly: true,
-                    normalizer: function (value) {
-                        return $.trim(value);
-                    }
-                },
-                lastname: {
-                    required: true,
-                    lettersonly: true,
-                    rangelength: [2, 20]
-                },
-                phone: {
-                    required: true,
-                    number: true,
-                    phoneNG: true,
-                    normalizer: function (value) {
-                        return $.trim(value);
-                    }
-                },
-                email: {
-                    required: true,
-                    emailCustom: true,
-                    normalizer: function (value) {
-                        return $.trim(value);
-                    }
-                },
-                age: {
-                    required: true,
-                    number: true,
-                    range: [10, 90],
-                    normalizer: function (value) {
-                        return $.trim(value);
-                    }
-                },
-                gender: {
-                    required: true,
-                    normalizer: function (value) {
-                        return $.trim(value);
-                    }
-                },
-                state: {
-                    required: true,
-                },
-                city: {
-                    required: true,
-                },
-                description: {
-                    required: true,
-                    rangelength: [20, 100],
-                    normalizer: function (value) {
-                        return $.trim(value);
-                    }
-                },
-                password: {
-                    required: true,
-                    minlength: 8,
-                    maxlength: 20,
-                    nowhitespace: true
-                },
-                password2: {
-                    required: true,
-                    equalTo: "#password"
-                }
-            },
-            submitHandler: function () {
-                let data = $("#userReg").serializeArray();
-                let res = {};
-                let cap;
-                data.forEach(el => {
-                    if (el.name !== 'password') {
-                        res[el.name] = $.trim(el.value.toLocaleLowerCase())
-                    } else {
-                        res[el.name] = el.value;
-                    }
-                })
-                $.ajax({
-                    method: 'POST',
-                    url: 'http://localhost:3000/users',
-                    data: res,
-                    success: function () {
-                        console.log(res)
-                        alert('registered')
-                    }
-                })
-                return false;
-            }
-        })
 
         $(".invalidClose").click((e) => {
             e.preventDefault()
@@ -413,19 +277,13 @@
             $.ajax({
                 method: 'GET',
                 url: `http://localhost:3000/users?email=${email}&password=${password}`,
-                // success: function (res) {
-                //    
-                // }
             }).done(function (data) {
                 if (data.length) {
                     let formatted = data[0]
                     localStorage.setItem('userData', JSON.stringify(formatted));
-                    // let u = JSON.parse(localStorage.getItem('userData'));
-                    // console.log(u.lastname)
-                    // console.log(data[0])
                     $("#user")[0].click();
                 } else {
-                    $
+
                     $("#invalid").show();
                 }
             })
