still putting things together on my edit profile page

--- a/Public/html/chatPage.html
+++ b/Public/html/chatPage.html
@@ -108,7 +108,7 @@
                     <div id="wellHeader">
                         <img src="../img/login_icon.png" alt="..." class="profile-img">
                         <span class="chatName">Cras
-                            justo</span> <a href="" id="back"><i class="fas fa-arrow-left"></i></a>
+                            justo</span> <a href="userPage.html" id="back"><i class="fas fa-arrow-left"></i></a>
                     </div>
                     <div id="wellBody">
                         <!-- <p class="msgIn">Hi <span class="timeStamp">8:14</span></p>
