--- a/Public/index.html
+++ b/Public/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./style/style.css">
@@ -114,8 +115,6 @@
                         <a href="./html/userPage.html" id="user" style="display: none;"></a>
                         <label for="inputEmail">Email address</label>
                         <input type="email" class="form-control" id="inputEmail" required placeholder="Enter Email">
-                        <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                            else.</small> -->
                     </div>
                     <div class="form-group">
                         <label for="inputPassword">Password</label>
@@ -123,8 +122,8 @@
                             placeholder="Enter Password">
                     </div>
                     <div class="form-group form-check">
-                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                        <label class="form-check-label" for="exampleCheck1">Remember me</label>
+                        <input type="checkbox" class="form-check-input" id="check1" value="1">
+                        <label class="form-check-label" for="check1">Show password</label>
                     </div>
                     <button type="submit" class="btn btn-success btn-block" id="signIn">Login</button>
                     <div id="ask">
